[workspace]
resolver = "2"

members = [
    # Foundational libraries (implemented)
    "libs/consensus",

    # Foundational libraries (placeholders - to be implemented)
    "libs/networking",
    "libs/storage",
    "libs/replication",
    "libs/metrics",
    "libs/tracing-ext",
    "libs/config",
    "libs/security",

    # NOTE: Services, control plane, and tools are commented out until implemented
    # Uncomment as each component is developed

    # Core services
    # "services/object-store",
    # "services/message-queue",
    # "services/function-runtime",
    # "services/orchestrator",
    # "services/api-gateway",
    # "services/timeseries-db",
    # "services/distributed-cache",
    # "services/block-storage",
    # "services/service-mesh",
    # "services/transaction-coordinator",
    # "services/tenant-isolation",

    # Control plane
    # "control-plane/cluster-manager",
    # "control-plane/scheduler",
    # "control-plane/api-server",

    # Tools
    # "tools/cli",
    # "tools/admin",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ObjectBox Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/objectbox"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

# Networking & RPC
tonic = { version = "0.11", features = ["tls", "compression"] }
prost = "0.12"
hyper = { version = "1.1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Storage
rocksdb = "0.21"
sled = "0.34"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
opentelemetry = "0.21"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
dashmap = "5.5"

# Cryptography
ring = "0.17"
rustls = "0.22"
blake3 = "1.5"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Testing
proptest = "1.4"
criterion = "0.5"
tempfile = "3.8"

# Internal workspace dependencies
objectbox-consensus = { path = "libs/consensus" }
objectbox-networking = { path = "libs/networking" }
objectbox-storage = { path = "libs/storage" }
objectbox-replication = { path = "libs/replication" }
objectbox-metrics = { path = "libs/metrics" }
objectbox-tracing = { path = "libs/tracing-ext" }
objectbox-config = { path = "libs/config" }
objectbox-security = { path = "libs/security" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
